--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -168,7 +168,8 @@
                         android:layout_marginTop="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
                         android:layout_marginBottom="@dimen/vs_10"
-                        android:text="立即播放"
+                        android:text="播放"
+			android:letterSpacing="0.2"
                         android:layout_marginStart="@dimen/vs_10"
                         android:layout_marginEnd="@dimen/vs_10"/>
                     <TextView
@@ -183,7 +184,8 @@
                         android:layout_marginTop="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
                         android:layout_marginBottom="@dimen/vs_10"
-                        android:text="快速搜索"
+                        android:text="快搜"
+			android:letterSpacing="0.2"
                         android:layout_marginEnd="@dimen/vs_10"/>
                     <TextView
                         android:textSize="@dimen/vs_20"
@@ -198,6 +200,7 @@
                         android:layout_marginRight="@dimen/vs_10"
                         android:layout_marginBottom="@dimen/vs_10"
                         android:text="倒序"
+			android:letterSpacing="0.2"
                         android:layout_marginEnd="@dimen/vs_10"/>
                     <TextView
                         android:textSize="@dimen/vs_20"
@@ -211,7 +214,8 @@
                         android:layout_marginTop="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
                         android:layout_marginBottom="@dimen/vs_10"
-                        android:text="加入收藏"
+                        android:text="收藏"
+			android:letterSpacing="0.2"
                         android:layout_marginEnd="@dimen/vs_10"/>
                     <TextView
                         android:textSize="@dimen/vs_20"
@@ -225,23 +229,24 @@
                         android:layout_marginTop="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
                         android:layout_marginBottom="@dimen/vs_10"
-                        android:text="内容简介"
+                        android:text="简介"
+			android:letterSpacing="0.2"
                         android:layout_marginEnd="@dimen/vs_10"/>
                     <TextView
                         android:id="@+id/tvPush"
                         android:layout_width="@dimen/vs_100"
                         android:layout_height="@dimen/vs_40"
                         android:layout_marginEnd="@dimen/vs_10"
-						android:layout_marginTop="@dimen/vs_10"
-						android:layout_marginBottom="@dimen/vs_10"
+			android:layout_marginTop="@dimen/vs_10"
+			android:layout_marginBottom="@dimen/vs_10"
                         android:layout_marginRight="@dimen/vs_10"
                         android:background="@drawable/button_detail_desc"
                         android:focusable="true"
                         android:gravity="center"
-                        android:text="远程推送"
+                        android:text="推送"
+			android:letterSpacing="0.2"
                         android:textColor="@android:color/white"
                         android:textSize="@dimen/vs_20" />
-
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
