--- a/app/src/main/res/layout/dialog_push.xml
+++ b/app/src/main/res/layout/dialog_push.xml
@@ -17,11 +17,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/vs_10"
-            android:layout_marginBottom="@dimen/vs_10"
-            android:layout_marginRight="@dimen/vs_10">
+            android:layout_marginRight="@dimen/vs_10"
+            android:layout_marginBottom="@dimen/vs_10">
             <TextView
                 android:textSize="@dimen/ts_24"
-                android:textStyle="bold"
                 android:textColor="@color/color_80000000"
                 android:gravity="center"
                 android:layout_width="@dimen/vs_214"
@@ -35,19 +34,18 @@
                 android:textColorHint="@color/color_6C3D3D3D"
                 android:gravity="center"
                 android:id="@+id/etAddr"
-                android:background="@drawable/input_search_1"
+                android:background="@drawable/input_search_2"
                 android:paddingLeft="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
                 android:layout_width="@dimen/vs_200"
                 android:layout_height="@dimen/vs_50"
                 android:hint="推送 IP 地址"
-                android:maxLength="15"
                 android:maxLines="1"
+                android:maxLength="15"
                 android:layout_weight="1.0"
                 android:inputType="text"/>
             <TextView
                 android:textSize="@dimen/ts_24"
-                android:textStyle="bold"
                 android:textColor="@color/color_80000000"
                 android:gravity="end|center"
                 android:layout_width="wrap_content"
@@ -64,13 +62,13 @@
                 android:gravity="center"
                 android:layout_gravity="end|center"
                 android:id="@+id/etPort"
-                android:background="@drawable/input_search_1"
+                android:background="@drawable/input_search_2"
                 android:paddingLeft="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
                 android:nextFocusDown="@+id/btnConfirm"
+                android:layout_height="@dimen/vs_50"
                 android:maxWidth="@dimen/vs_70"
                 android:minWidth="@dimen/vs_70"
-                android:layout_height="@dimen/vs_50"
                 android:hint="端口"
                 android:maxLines="1"
                 android:maxLength="5"
@@ -83,13 +81,12 @@
             android:layout_margin="@dimen/vs_10">
             <TextView
                 android:textSize="@dimen/ts_24"
-                android:textStyle="bold"
                 android:textColor="@color/color_80000000"
                 android:gravity="center"
-                android:layout_width="@dimen/vs_160"
-                android:layout_height="fill_parent"
                 android:paddingLeft="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
+                android:layout_width="@dimen/vs_160"
+                android:layout_height="fill_parent"
                 android:layout_marginRight="@dimen/vs_20"
                 android:text="当前 IP 地址   "
                 android:layout_marginEnd="@dimen/vs_20"/>
@@ -110,7 +107,6 @@
                 android:inputType="text"/>
             <TextView
                 android:textSize="@dimen/ts_24"
-                android:textStyle="bold"
                 android:textColor="@color/color_80000000"
                 android:gravity="end|center"
                 android:layout_width="wrap_content"
@@ -128,14 +124,14 @@
                 android:layout_gravity="end|center"
                 android:id="@+id/btnConfirm"
                 android:background="@drawable/button_dialog_main"
+                android:paddingLeft="13.0mm"
+                android:paddingRight="13.0mm"
                 android:focusable="true"
                 android:nextFocusDown="@+id/btnConfirm"
                 android:clickable="true"
-                android:paddingLeft="13mm"
-                android:paddingRight="13mm"
+                android:layout_height="@dimen/vs_50"
                 android:maxWidth="@dimen/vs_76"
                 android:minWidth="@dimen/vs_76"
-                android:layout_height="@dimen/vs_50"
                 android:text="推送"
                 android:maxLines="1"
                 android:layout_weight="1.0"/>
