--- a/app/src/main/res/layout/dialog_tip.xml
+++ b/app/src/main/res/layout/dialog_tip.xml
@@ -1,66 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<FrameLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
-        android:layout_width="@dimen/vs_440"
-        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/shape_dialog_bg_main"
         android:orientation="vertical"
-        android:padding="@dimen/vs_30">
-
-
+        android:background="@drawable/shape_dialog_bg_main"
+        android:padding="@dimen/vs_30"
+        android:layout_width="@dimen/vs_440"
+        android:layout_height="wrap_content">
         <TextView
+            android:textSize="@dimen/ts_24"
+            android:textColor="@color/color_CC000000"
+            android:layout_gravity="center"
             android:id="@+id/tipInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
             android:lineSpacingExtra="@dimen/ts_50"
-            android:lineSpacingMultiplier="0"
-            android:textAlignment="gravity"
-            android:textColor="@color/color_CC000000"
-            android:textSize="@dimen/ts_24"
-            tools:text="1111111111111111111111111111111111111111111111111111" />
-
-
+            android:lineSpacingMultiplier="0.0"
+            android:textAlignment="gravity"/>
         <LinearLayout
+            android:layout_gravity="center"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/vs_30"
-            android:orientation="horizontal">
-
+            android:layout_marginTop="@dimen/vs_30">
             <TextView
+                android:textSize="@dimen/ts_22"
+                android:textColor="@color/color_FFFFFF"
+                android:gravity="center"
+                android:layout_gravity="center"
                 android:id="@+id/leftBtn"
-                android:layout_width="wrap_content"
+                android:background="@drawable/button_dialog_main"
+                android:padding="@dimen/vs_10"
+                android:focusable="true"
+                android:layout_width="@dimen/vs_170"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginRight="@dimen/vs_5"
-                android:background="@drawable/button_dialog_main"
-                android:focusable="true"
-                android:gravity="center"
-                android:padding="@dimen/vs_10"
-                android:text="确定"
-                android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_22" />
-
+                android:text="确定"/>
             <TextView
-                android:id="@+id/rightBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/vs_5"
-                android:background="@drawable/button_dialog_main"
-                android:focusable="true"
-                android:gravity="center"
-                android:padding="@dimen/vs_10"
-                android:text="取消"
+                android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_22" />
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:id="@+id/rightBtn"
+                android:background="@drawable/button_dialog_main"
+                android:padding="@dimen/vs_10"
+                android:focusable="true"
+                android:layout_width="@dimen/vs_170"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/vs_5"
+                android:text="取消"/>
         </LinearLayout>
-
     </LinearLayout>
 </FrameLayout>
