--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -133,6 +133,51 @@
         android:padding="@dimen/vs_20"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
+
+        <RelativeLayout
+            android:id="@+id/search_tips"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ll_search_layout">
+
+            <TextView
+                android:textColor="@android:color/white"
+                android:id="@+id/title_history"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/vs_20"
+                android:textSize="@dimen/ts_22"
+                android:text="搜索历史" />
+
+            <ImageView                
+                android:id="@+id/clear_history"
+                android:layout_width="@dimen/vs_50"
+                android:layout_height="@dimen/vs_50"
+                android:gravity="center"
+                android:background="@drawable/shape_user_focus"
+                android:focusable="true"
+                android:focusableInTouchMode="false"
+                android:padding="@dimen/vs_5"
+                android:layout_marginRight="@dimen/vs_20"              
+                android:src="@drawable/icon_delete"
+                android:layout_alignParentRight="true" />
+        </RelativeLayout>
+
+		  <com.yang.flowlayoutlibrary.FlowLayout
+            android:id="@+id/tv_history"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/vs_20"
+            android:layout_marginTop="@dimen/vs_20"
+            android:layout_marginRight="@dimen/vs_20"
+            app:backgroundResource="@drawable/shape_user_focus"
+            app:horizontalSpacing="@dimen/vs_20"
+            app:itemColor="@android:color/white"
+            app:itemSize="@dimen/vs_20"
+            app:textPaddingH="@dimen/vs_20"
+            app:textPaddingV="@dimen/vs_10"
+            app:verticalSpacing="@dimen/vs_20" />   
+
         <com.owen.tvrecyclerview.widget.TvRecyclerView
             android:id="@+id/mGridView"
             android:visibility="invisible"
@@ -143,5 +188,7 @@
             app:tv_horizontalSpacingWithMargins="@dimen/vs_10"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_5"/>
+
+
     </LinearLayout>
 </LinearLayout>
