--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -109,6 +109,7 @@
         android:layout_width="@dimen/vs_160"
         android:layout_height="fill_parent">
         <TextView
+		    android:id="@+id/mHotSearch_text"
             android:textSize="@dimen/ts_22"
             android:textColor="@android:color/white"
             android:layout_gravity="center_horizontal"
