--- a/app/src/main/res/layout/loadsir_empty_layout.xml
+++ b/app/src/main/res/layout/loadsir_empty_layout.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+	android:id="@+id/empty_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
