--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -13,8 +13,6 @@
         <LinearLayout
             android:orientation="horizontal"
             android:id="@+id/tvUserHome"
-            android:paddingLeft="@dimen/vs_2"
-            android:paddingRight="@dimen/vs_1"
             android:paddingBottom="@dimen/vs_5"
             android:focusable="false"
             android:focusableInTouchMode="false"
@@ -36,7 +34,10 @@
                 android:clipToPadding="false"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/vs_80"
-                android:layout_margin="@dimen/vs_3"
+                android:layout_marginLeft="@dimen/vs_5"
+                android:layout_marginRight="@dimen/vs_3"
+                android:layout_marginTop="@dimen/vs_3"
+                android:layout_marginBottom="@dimen/vs_3"
                 android:layout_weight="1.0">
                 <ImageView
                     android:gravity="center"
@@ -271,7 +272,10 @@
                 android:clipToPadding="false"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/vs_80"
-                android:layout_margin="@dimen/vs_3"
+                android:layout_marginLeft="@dimen/vs_3"
+                android:layout_marginRight="@dimen/vs_5"
+                android:layout_marginTop="@dimen/vs_3"
+                android:layout_marginBottom="@dimen/vs_3"
                 android:layout_weight="1.0">
                 <ImageView
                     android:gravity="center"
@@ -308,7 +312,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvUserHome"
-            app:tv_horizontalSpacingWithMargins="20dip"
+            app:tv_horizontalSpacingWithMargins="20.0dip"
             app:tv_layoutManager="V7GridLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
@@ -325,7 +329,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvUserHome"
-            app:tv_horizontalSpacingWithMargins="20dip"
+            app:tv_horizontalSpacingWithMargins="20.0dip"
             app:tv_layoutManager="V7LinearLayoutManager"
             app:tv_selectedItemIsCentered="true"
             app:tv_verticalSpacingWithMargins="@dimen/vs_10"/>
