--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,9 +24,11 @@
             android:gravity="center|left"
             android:id="@+id/tvName"
             android:background="@drawable/button_home_sort_focus"
-            android:paddingLeft="@dimen/vs_5"
-            android:paddingRight="@dimen/vs_5"
             android:focusable="false"
+            android:maxEms="22"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
             android:focusableInTouchMode="false"
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
@@ -35,9 +37,19 @@
         <TextView
             android:textSize="@dimen/ts_28"
             android:textColor="@android:color/white"
+            android:gravity="center"
+            android:layout_weight="1.0"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:textAlignment="gravity"/>
+        <TextView
+            android:textSize="@dimen/ts_28"
+            android:textColor="@android:color/white"
             android:gravity="center|right"
             android:id="@+id/tvDate"
-			android:background="@drawable/button_home_sort_focus"
+            android:background="@drawable/button_home_sort_focus"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:layout_width="wrap_content"
