--- a/app/src/main/res/layout/fragment_model.xml
+++ b/app/src/main/res/layout/fragment_model.xml
@@ -376,10 +376,10 @@
                             android:textSize="@dimen/ts_24"
                             android:textColor="@android:color/white"
                             android:id="@+id/tvPlay"
-                            android:maxEms="4"
-                            android:singleLine="true"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content"
+                            android:maxEms="4"
+                            android:singleLine="true"/>
                         <TextView
                             android:textSize="@dimen/ts_30"
                             android:textColor="@android:color/white"
@@ -650,7 +650,7 @@
                     <LinearLayout
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:id="@+id/llSearchTv"
+                        android:id="@+id/llScale"
                         android:background="@drawable/shape_setting_model_focus"
                         android:paddingLeft="@dimen/vs_20"
                         android:paddingRight="@dimen/vs_20"
@@ -664,7 +664,7 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="附近聚汇"/>
+                            android:text="画面缩放"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
@@ -672,7 +672,7 @@
                         <TextView
                             android:textSize="@dimen/ts_24"
                             android:textColor="@android:color/white"
-                            android:id="@+id/remoteTv"
+                            android:id="@+id/tvScaleType"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
                         <TextView
@@ -805,7 +805,7 @@
                     <LinearLayout
                         android:gravity="center_vertical"
                         android:orientation="horizontal"
-                        android:id="@+id/llScale"
+                        android:id="@+id/llSearchTv"
                         android:background="@drawable/shape_setting_model_focus"
                         android:paddingLeft="@dimen/vs_20"
                         android:paddingRight="@dimen/vs_20"
@@ -819,7 +819,7 @@
                             android:textColor="@android:color/white"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="画面缩放"/>
+                            android:text="附近聚汇"/>
                         <Space
                             android:layout_width="0.0dip"
                             android:layout_height="wrap_content"
@@ -827,7 +827,7 @@
                         <TextView
                             android:textSize="@dimen/ts_24"
                             android:textColor="@android:color/white"
-                            android:id="@+id/tvScaleType"
+                            android:id="@+id/remoteTv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
                         <TextView
